# dotfiles

./: .bash_logout  .bash_profile  .bash_profile.in  .bashrc  .emacs  .gdbinit  .gitconfig  .gitignore  .gitmodules  .gnus  .guile  .mailcap  .muttrc  .procmailrc  .profile  .screenrc  .signature  .stumpwmrc  .tmux.conf  .xinitrc  Makefile  Makefile.am  README  README.md  README.org  Xresources  bash_profile  bashrc  bootstrap.sh  configure.ac  emacsd.service  gitconfig  ido.last  init.el  install.lisp  makeissue  xinitrc
.config/: gtkrc-2.0  mpdnotify.conf
.config/compton/: compton.conf
.config/dunst/: dunstrc
.config/git/: ignore
.config/gtk-3.0/: bookmarks  settings.ini
.config/htop/: htoprc
.config/i3/: config
.config/i3status/: config
.config/mpd/: mpd.conf
.config/mpdcron/: mpdcron.conf
.config/mpdcron/hooks/: player
.config/mutt/: colors  crypto  display-format  mailheaders  url-viewing
.config/ncmpcpp/: config
.config/stumpwm/: commands.lisp  custom.lisp  defprogram.lisp  groups.lisp  init.lisp  mode-line.lisp  rotate-windows.lisp  swank.lisp  vikeys.lisp
.config/systemd/user/: emacsd.service  jupyter_luria@.service  jupyter_luria@.service.in
.config/xfce4/panel/: battery-17.rc  cpugraph-16.rc
.config/xfce4/xfconf/xfce-perchannel-xml/: xfce4-panel.xml
.config/xorg/: Xmodmap  Xresources
.emacs.d/: early-init.el  init.el
.emacs.d/elisp/: 0-init-utils.el  0-straight.el  c-config.el  company-config.el  flycheck-config.el  go-config.el  helm-config.el  irony-config.el  mail-config.el  misc.el  my-clojure-config.el  my-eglot.el  my-ess.el  my-helm-config.el  my-hydras.el  my-java-config.el  my-julia-config.el  my-lisp-config.el  my-magit-config.el  my-misc-config.el  my-org-config.el  my-perl-config.el  my-php-config.el  my-python-config.el  my-scheme-config.el  my-smartparens-config.el  my-tree-sitter.el  my-versioning.el  my-yasnippet.el  no-training-wheels.el  prog-config.el  projectile-config.el  style.el  tags.el  visuals.el  x-config.el
.emacs.d/snippets/sh-mode/: slurmarray  slurmjob
.gnupg/: gpg-agent.conf
.ncmpcpp/: config
.ssh/: config.in
custom/: whitespace.el
src/: conda_init.sh.in
